// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single-select assign label and value key renders correctly 1`] = `
<div
  class="cloud-select"
>
  <div
    class="cloud-select-wrapper empty default"
  >
    <span
      class="cloud-select-selected"
      title=""
    >
      请选择
    </span>
    <i
      class="cloud-select-select-icon cloud-select-clear-icon cloud-icon icon-close-fill-1"
    />
    <i
      class="cloud-select-select-icon close cloud-icon icon-down"
    />
  </div>
</div>
`;

exports[`single-select dataSource renders correctly 1`] = `
<div
  class="cloud-select"
>
  <div
    class="cloud-select-wrapper empty default"
  >
    <span
      class="cloud-select-selected"
      title=""
    >
      select
    </span>
    <i
      class="cloud-select-select-icon cloud-select-clear-icon cloud-icon icon-close-fill-1"
    />
    <i
      class="cloud-select-select-icon close cloud-icon icon-down"
    />
  </div>
</div>
`;

exports[`single-select renders correctly 1`] = `
<div
  class="cloud-select"
>
  <div
    class="cloud-select-wrapper empty default"
  >
    <span
      class="cloud-select-selected"
      title=""
    >
      select
    </span>
    <i
      class="cloud-select-select-icon cloud-select-clear-icon cloud-icon icon-close-fill-1"
    />
    <i
      class="cloud-select-select-icon close cloud-icon icon-down"
    />
  </div>
</div>
`;

exports[`single-select renders only one option correctly 1`] = `
<div
  class="cloud-select"
>
  <div
    class="cloud-select-wrapper empty default"
  >
    <span
      class="cloud-select-selected"
      title=""
    >
      select
    </span>
    <i
      class="cloud-select-select-icon cloud-select-clear-icon cloud-icon icon-close-fill-1"
    />
    <i
      class="cloud-select-select-icon close cloud-icon icon-down"
    />
  </div>
</div>
`;
